--- a/tamplets/views/index.hbs
+++ b/tamplets/views/index.hbs
@@ -18,23 +18,99 @@
   <i class="fas fa-search" aria-hidden="true"></i>
 </form>
             </div>
-            <div class="col-12 col-sm-4 col-md-4">
-            
-<br>
-<br>
-     <div>
+   
       
-</div>
-
- 
-            </div>
-        </div>
+                  </div>
 <div>
          <h5 id="title"></h5>    
         <p id="body"></p>
                              </div>
-           <div class=" align-items-center">
-            <div class="col-12 col-sm-4 col-md-4 row row-content ">
+ 
+                        </div>
+      
+
+
+                             <div class="container row row-content align-self-center ">
+            <div class="col-12 col-sm-4 col-md-4  ">
+             <div class="card" style="max-width: 20rem;">
+<h5 class="card-header" id="nyTitle"></h5>
+<div class="card-body">
+<h4 class="card-title" id=""></h4>
+<p class="card-text" id="ny"></p>
+</div>
+<div class="card-footer">
+
+</div>
+</div>
+            </div>
+
+
+{{!-- second card --}}
+
+
+          <div class="col-12 col-sm col-md   ">
+             <div class="card" style="max-width: 20rem;">
+<h3 class="card-header" id="londonTitle"></h3>
+<div class="card-body">
+<h4 class="card-title" id=""></h4>
+<p class="card-text" id="london"></p>
+</div>
+<div class="card-footer">
+
+</div>
+</div>
+            </div>
+
+
+            {{!-- third card --}}
+              <div class="col-12 col-sm col-md   ">
+             <div class="card" style="max-width: 20rem;">
+<h3 class="card-header" id="uaeTitle"></h3>
+<div class="card-body">
+<h4 class="card-title" id=""></h4>
+<p class="card-text" id="uae"></p>
+</div>
+<div class="card-footer">
+
+</div>
+</div>
+            </div>
+            
+            </div>
+
+
+            {{!-- second row --}}
+
+                         <div class="container row row-content align-self-center ">
+            <div class="col-12 col-sm-4 col-md-4  ">
+             <div class="card" style="max-width: 20rem;">
+<h5 class="card-header" id="saudiTitle"></h5>
+<div class="card-body">
+<h4 class="card-title" id=""></h4>
+<p class="card-text" id="saudi"></p>
+</div>
+<div class="card-footer">
+
+</div>
+</div>
+            </div>
+
+            <div class="col-12 col-sm col-md   ">
+             <div class="card" style="max-width: 20rem;">
+<h3 class="card-header" id="qaterTitle"></h3>
+<div class="card-body">
+<h4 class="card-title" id=""></h4>
+<p class="card-text" id="qater"></p>
+</div>
+<div class="card-footer">
+
+</div>
+</div>
+            </div>
+
+
+            {{!-- ------ --}}
+                        <div class="col-12 col-sm col-md   ">
              <div class="card" style="max-width: 20rem;">
 <h3 class="card-header" id="muscatTitle"></h3>
 <div class="card-body">
@@ -46,99 +122,16 @@
 </div>
 </div>
             </div>
-            <div class="col-12 col-sm-4 col-md-4  row-content">
-                <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="qaterTitle">
-
-</h3>
-<div class="card-body">
-<h4 class="card-title" id=""></h4>
-<p class="card-text" id="qater"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-                
-             
-            </div>
-
-              <div class="col-12 col-sm-4 col-md-4  row-content">
-                <div class="card" style="max-width: 20rem;">
-<h5 class="card-header" id="saudiTitle">
-
-</h5>
-<div class="card-body">
-<h4 class="card-title"></h4>
-<p class="card-text" id="saudi"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-                
-             
-            </div>
-        </div>
-
-
-              <div class="  align-items-center ">
-            <div class="col-12 col-sm-4 col-md-4 row row-content ">
-             <div class="card" style="max-width: 20rem;">
-<h5 class="card-header" id="londonTitle">
-
-</h5>
-<div class="card-body" >
-<h4 class="card-title"></h4>
-<p class="card-text" id="london"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
-            <div class="col-12 col-sm-4 col-md-4 row row-content ">
-                <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="uaeTitle">
-
-</h3>
-<div class="card-body">
-<h4 class="card-title"></h4>
-<p class="card-text" id="uae"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-                
-             
-            </div>
-
-              <div class="col-12 col-sm-4 col-md-4 row  row-content">
-                <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="nyTitle">
-
-</h3>
-<div class="card-body">
-<h4 class="card-title"></h4>
-<p class="card-text" id="ny"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-                
-             
-            </div>
-        </div>
-
-        <div>
-          <br>
-          <br>
-        </div>
 
 
 
+                         </div>
+
+
+
+     
+
+<footer>
 {{>footer}}
    </footer>
 </body>
