--- a/tamplets/partsls/header.hbs
+++ b/tamplets/partsls/header.hbs
@@ -5,13 +5,13 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Vision</a>
+                    <a class="navbar-brand" href="/">Vision</a>
                     <div class="collapse navbar-collapse" id="Navbar">
                             <ul class="navbar-nav mr-auto">
                                     <li class="nav-item {{satusHome}}"><a class="nav-link" href="/">Home</a></li>
                                     <li class="nav-item {{satusAbout}} "><a class="nav-link" href="about">About</a></li>
-                                    <li class="nav-item {{satusHelp}} "><a class="nav-link" href="help">Help</a></li>
-                                    <li class="nav-item {{satusContact}}"><a class="nav-link" href="#">Contact</a></li>
+                                    {{!-- <li class="nav-item {{satusHelp}} "><a class="nav-link" href="help">Help</a></li>
+                                    <li class="nav-item {{satusContact}}"><a class="nav-link" href="#">Contact</a></li> --}}
                                 </ul>
                     </div>
                  
@@ -26,7 +26,7 @@
             <div class="row row-header">
                 <div class="col-12 col-sm-6">
                     <h1>Vision</h1>
-                    <p>Wather Forecaster </p>
+                    <p>Weather Forecaster </p>
                 </div>
                 <div class="col-12 col-sm">
                         
