--- a/tamplets/partsls/footer.hbs
+++ b/tamplets/partsls/footer.hbs
@@ -6,10 +6,10 @@
                 <div class="col-4  col-sm-2">
                     <h5>Links</h5>
                     <ul class="list-unstyled">
-                        <li><a href="#">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li><a href="about">About</a></li>
-                        <li><a href="help">Help</a></li>
-                        <li><a href="#">Contact</a></li>
+                        {{!-- <li><a href="help">Help</a></li>
+                        <li><a href="#">Contact</a></li> --}}
                     </ul>
                 </div>
                 <div class="col-7 col-sm-5 ">
@@ -19,7 +19,7 @@
 		             Muscat<br>
 		              Tel.: +968 9060 0093<br>
 		              
-		              Email: <a href="mailto:albalushimohammed679@gmail.com">confusion@food.net</a>
+		              Email: <a href="mailto:albalushimohammed679@gmail.com">albalushimohammed679@gmail.comt</a>
 		           </address>
                 </div>
                 <div class="col-12 col-sm-4 ">
