--- a/tamplets/views/index.hbs
+++ b/tamplets/views/index.hbs
@@ -1,139 +1,60 @@
 <!DOCTYPE html>
 <html>
+
 <head>
- 
-{{>head}}
+
+  {{>head}}
 </head>
+
 <body>
   {{>header}}
 
 
-<div class="container">
-        <div class="row row-content  align-items-center">
-            <div class="col-12 col-sm-3 col-md-3 align-self-center">
-                <h3>Search</h3>
-                    <form class="form-inline active-cyan-4 search ">
-  <input class="form-control form-control-sm mr-3 w-75 " type="text" placeholder="Search"
-    aria-label="Search">
-  <i class="fas fa-search" aria-hidden="true"></i>
-</form>
-            </div>
-   
-      
-                  </div>
-<div>
-         <h5 id="title"></h5>    
-        <p id="body"></p>
-                             </div>
- 
-                        </div>
-      
+  <div class="container">
+    <div class="row  align-items-center">
+      <div class="col-12 col-sm-3 col-md-3 align-self-center">
+        <h3>Information</h3>
+        <form class="form-inline active-cyan-4  " method="POST" action="/pdf-gen">
 
+        <p>Name</p>
+        
+          <input class="form-control form-control-sm mr-3 w-75 text-input" type="text" name="name"placeholder="">
+          
+         <p>Phone Number</p>
+          <input class="form-control form-control-sm mr-3 w-75 text-input" type="text" name="number"placeholder="">
 
-                             <div class="container row row-content align-self-center ">
-            <div class="col-12 col-sm-4 col-md-4  ">
-             <div class="card" style="max-width: 20rem;">
-<h5 class="card-header" id="nyTitle"></h5>
-<div class="card-body">
-<h4 class="card-title" id=""></h4>
-<p class="card-text" id="ny"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
-
-
-{{!-- second card --}}
-
-
-          <div class="col-12 col-sm col-md   ">
-             <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="londonTitle"></h3>
-<div class="card-body">
-<h4 class="card-title" id=""></h4>
-<p class="card-text" id="london"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
-
-
-            {{!-- third card --}}
-              <div class="col-12 col-sm col-md   ">
-             <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="uaeTitle"></h3>
-<div class="card-body">
-<h4 class="card-title" id=""></h4>
-<p class="card-text" id="uae"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
-            
-            </div>
-
-
-            {{!-- second row --}}
-
-                         <div class="container row row-content align-self-center ">
-            <div class="col-12 col-sm-4 col-md-4  ">
-             <div class="card" style="max-width: 20rem;">
-<h5 class="card-header" id="saudiTitle"></h5>
-<div class="card-body">
-<h4 class="card-title" id=""></h4>
-<p class="card-text" id="saudi"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
-
-            <div class="col-12 col-sm col-md   ">
-             <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="qaterTitle"></h3>
-<div class="card-body">
-<h4 class="card-title" id=""></h4>
-<p class="card-text" id="qater"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
-
-
-            {{!-- ------ --}}
-                        <div class="col-12 col-sm col-md   ">
-             <div class="card" style="max-width: 20rem;">
-<h3 class="card-header" id="muscatTitle"></h3>
-<div class="card-body">
-<h4 class="card-title" id="muscatTitle"></h4>
-<p class="card-text" id="muscat"></p>
-</div>
-<div class="card-footer">
-
-</div>
-</div>
-            </div>
+            <p>Email</p>
+          <input class="form-control form-control-sm mr-3 w-75 text-input" type="text" name="email" placeholder="">
+          <p>Department</p>
+          <input class="form-control form-control-sm mr-3 w-75 text-input" type="text" name="dpt" placeholder="">
+            <input class="form-control form-control-sm mr-3 w-75 btn" type="submit"  placeholder="">
 
 
 
-                         </div>
+       
+        </form>
+      </div>
+
+
+    </div>
+    <div>
+      <h5 id="title"></h5>
+      <p id="body"></p>
+    </div>
+
+  </div>
 
 
 
-     
+  </div>
 
-<footer>
-{{>footer}}
-   </footer>
+
+
+
+
+  <footer>
+    {{>footer}}
+  </footer>
 </body>
 
 
